Closed Bug 1168889 Opened 11 years ago Closed 11 years ago

B2G Desktop animations flicker a lot since bug 1152461

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: paul, Assigned: mstange)

References

Details

Attachments

(3 files)

- B2G Desktop - OSX - hw-vsync - apzc Animations (opacity & 2d transforms) flicker a lot on Desktop since bug 1152461. Reverting the patch, animations are smooth again, but I get this warning: [Parent 25537] WARNING: Tiled PaintedLayer with no scrollable container ancestor: file /Users/paul/mozilla/src/gfx/layers/client/ClientTiledPaintedLayer.cpp, line 150
Clarification: the warning only appears if apzc is turned off. Whether apzc is on or off, animations still flicker.
Please tell me how to run B2G Desktop. I cloned the gaia repository, executed make, and tried to run the profile with B2G desktop downloaded from https://ftp.mozilla.org/pub/mozilla.org/b2g/nightly/latest-mozilla-central/b2g-41.0a1.en-US.mac64.dmg , and all I got was a small black window with a home button and a back button and the output: JavaScript error: chrome://b2g/content/shell.js, line 14: NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIPrefBranch.getCharPref]
Attached file test case
STR: - run B2G with Gaia - open attached test case as a web page - important: make the B2G window larger - move mouse over the page - see flickering
Attached video screencast
(In reply to Markus Stange [:mstange] from comment #2) > Please tell me how to run B2G Desktop. I cloned the gaia repository, > executed make, and tried to run the profile with B2G desktop downloaded from > https://ftp.mozilla.org/pub/mozilla.org/b2g/nightly/latest-mozilla-central/ > b2g-41.0a1.en-US.mac64.dmg , and all I got was a small black window with a > home button and a back button and the output: > JavaScript error: chrome://b2g/content/shell.js, line 14: > NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff > (NS_ERROR_UNEXPECTED) [nsIPrefBranch.getCharPref] I have the same issue… I don't know how nightlies work. I usually just build B2G (with --enable-application=b2g in mozconfig) and then run with `./mach run --profile gaia/profile`. Also, see screencast and test case attached. I think the bug is more visible with hardware vsync.
Flags: needinfo?(mstange)
It looks like B2G Desktop OS X is now using ContentClientSingleBuffered for non-scrollable PaintedLayers. Is that bad? Are there known bugs in ContentClientSingleBuffered? The flickering / tearing looks like what you'd get if we were uploading to the texture at the same time that the main thread is painting into the buffer.
Flags: needinfo?(mstange) → needinfo?(nical.bugzilla)
By the way, thanks for the tip with the local build, Paul, it's working for me now. (Though I had to edit the prefs in the profile's user.js file; the preferences app wouldn't actually let me access any pref panes.)
Attached patch patchSplinter Review
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attachment #8613057 - Flags: review?(nical.bugzilla)
Flags: needinfo?(nical.bugzilla)
The upload was happening outside the transaction, while the main thread was already painting the next frame into the shared buffer.
Attachment #8613057 - Flags: review?(nical.bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
Blocks: graphene
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: