Bug 1168889 - ContentClientSingleBuffered needs to upload during the transaction. r=nical